ros2_package2/log/build_2023-02-10_06-13-56/my_first_package/stderr.log
/home/minkyo2/.local/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/minkyo2/ROS2/ros2_package2/install/my_first_package/lib/python3.8/site-packages/my_first_package/turtle_cmd_and_pose.py", line 14
    'turtle1/cmd_vel',self.callback_cmd, 10)
    ^
SyntaxError: invalid syntax

